# unitas_setup_tool

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build-on-push.yml
src/: error.rs  main.rs
src/utils/: cache_cleanup.rs  fs.rs  install.rs  local_versions.rs  mod.rs
src/utils/assembly_version/: mod.rs
src/utils/download/: error.rs  mod.rs
src/utils/game_dir/: error.rs
src/utils/github_artifact/: error.rs
src/utils/history/: error.rs
src/utils/paths/: mod.rs
