[package]
authors = ["yuu0141 <https://github.com/Eddio0141>"]
description = "A tool to set up UniTAS for some unity games"
edition = "2021"
name = "unitas_setup_tool"
publish = false
version = "1.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
clap = {version = "4.4.12", features = ["derive"]}
dirs = "5.0.1"
env_logger = "0.10.1"
goblin = "0.8.0"
log = "0.4.20"
pelite = "0.10.0"
reqwest = "0.11.23"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.53"
tokio = {version = "1.35.1", features = ["rt", "fs", "macros", "rt-multi-thread"]}
zip = "0.6.6"
