[package]
authors = ["yuu0141 <https://github.com/Eddio0141>"]
description = "A tool to set up UniTAS for some unity games"
edition = "2021"
name = "unitas_setup_tool"
publish = false
version = "1.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = {version = "4.5.0", features = ["derive"]}
dirs = "5.0.1"
env_logger = "0.10.2"
goblin = "0.8.0"
log = "0.4.20"
pelite = "0.10.0"
reqwest = "0.11.24"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = {version = "1.36.0", features = ["rt", "fs", "macros", "rt-multi-thread"]}
zip = "0.6.6"
