[package]
authors = ["yuu0141 <https://github.com/Eddio0141>"]
description = "A tool to set up UniTAS for some unity games"
edition = "2021"
name = "unitas_setup_tool"
publish = false
version = "1.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
clap = {version = "4.5.20", features = ["derive"]}
dirs = "5.0.1"
env_logger = "0.10.2"
goblin = "0.8.2"
log = "0.4.22"
pelite = "0.10.0"
reqwest = "0.12.4"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = {version = "1.38.1", features = ["rt", "fs", "macros", "rt-multi-thread"]}
zip = "1.3.0"
